--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,11 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs'
 
 android {
-    compileSdkVersion 'android-P'
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.rs.flickd"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -55,7 +55,7 @@ android {
 dependencies {
     def lifecycle_version = "2.0.0-alpha1"
     //Navigation package currently depends on 27.1
-    def appcompat_version = "1.0.0-alpha1"
+    def appcompat_version = "1.0.0-alpha3"
     def room_version = "2.0.0-alpha1"
     def paging_version = "2.0.0-alpha1"
     def nav_version = "1.0.0-alpha01"
@@ -78,10 +78,10 @@ dependencies {
     //ViewModel and LifeCycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-alpha1'
-    implementation 'com.google.android.material:material:1.0.0-alpha1'
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0-alpha3'
+    implementation 'com.google.android.material:material:1.0.0-alpha3'
+    implementation 'androidx.appcompat:appcompat:1.0.0-alpha3'
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     //Room
@@ -109,6 +109,9 @@ dependencies {
 
     //Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     // Facebook Login only
